hphp/hack/test/typecheck/void_isnt_dynamic.php
<?hh // partial

function foo(): dynamic {
}
